feat(api): user images management
